# packaging_tutorials

./: .gitignore  README.md
pip_for_python/: LICENSE  README.md  pyproject.toml
pip_for_python/src/packaging_tutorial_xyz/: example.py
